# cmake-test

./: CMakeLists.txt
include/: shared_fun.h  static_fun.h
source/test1/: CMakeLists.txt  test1.cpp
source/test2/: CMakeLists.txt  test2.cpp
source/test2/static_fun/: CMakeLists.txt  static_fun.cpp
source/test3/: CMakeLists.txt  test3.cpp
source/test3/shared_fun/: CMakeLists.txt  shared_fun.cpp
